--- a/ui/src/styles/settings/_settings.global.scss
+++ b/ui/src/styles/settings/_settings.global.scss
@@ -63,6 +63,8 @@ $global-font-size-lg:  32px;
 $global-font-size-md:  24px;
 $global-font-size-sm:  14px;
 
+$global-header-height: 72px;
+
 $global-hero-height: 145px;
 $global-hero-height-md: 218px;
 $global-hero-height-lg: 436px;
